--- a/styles/global.css
+++ b/styles/global.css
@@ -19,16 +19,14 @@
 
 html,
 body {
-    padding: 0;
+    padding: 0 0.5rem;
     margin: 0;
     -webkit-font-smoothing: antialiased;
     font-family: Roboto, v-apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
     line-height: 1.6;
     /* 16px *1.375 = 22px*/
     font-size: 1.375rem;
-    height: 100%;
     overflow-x: hidden;
-    padding: 0 0.5rem;
 }
 
 * {
